--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.2
   cached_network_image: ^2.2.0+1
   webview_flutter: ^0.3.22+1
+  shared_preferences: ^0.5.8
 
 
   # The following adds the Cupertino Icons font to your application.
